# PhyG

./: .gitignore  CITATION.cff  PhyG.cabal  README.md  ReleaseNotes  cabal.project  cabal.project.freeze  fullcommit.txt
app/: phygraph.hs  (+1 more)
pkg/PHAGE-file-source/: PHAGE-file-source.cabal  README.md
pkg/PHAGE-file-source/src/Data/: FileSource.hs
pkg/PHAGE-file-source/src/Data/FileSource/: IO.hs  InputStreamError.hs  OutputStreamError.hs  ParseStreamError.hs
pkg/PHAGE-language/: CHANGELOG.md  PHAGE-language.cabal  README.md
pkg/PHAGE-language/src/PCG/: Syntax.hs
pkg/PHAGE-language/src/PCG/Syntax/: Combinators.hs  Parser.hs  Primitive.hs
pkg/PHAGE-timing/: PHAGE-timing.cabal  Timing.md
pkg/PHAGE-timing/src/System/: Timing.hs
pkg/PHAGE-validation-transformer/: PHAGE-validation-transformer.cabal  README.md
pkg/PHAGE-validation-transformer/src/Control/Monad/Trans/: Validation.hs
pkg/PHAGE-validation-transformer/test/: TestSuite.hs
pkg/PhyG/: PhyG.cabal  README.md  cabal.project
pkg/PhyG/Commands/: CommandUtilities.hs
pkg/PhyG/Input/: ReadInputFiles.hs
pkg/PhyG/Search/: Swap.hs  WagnerBuild.hs
pkg/PhyG/app/CommandLineOptions/: Display.hs  Types.hs
pkg/PhyG/app/Software/: Credits.hs  License.hs  Metadata.hs  Preamble.hs  SplashImage.hs
pkg/PhyG/doc/: Authors.md  Funding.md  LICENSE
pkg/PhyG/ffi/external-direct-optimization/: ukkCheckPoint.c
pkg/PhyGraph/: CHANGELOG.md  PhyGraph.cabal  README.md  cabal.project  phygraph.hs
pkg/PhyGraph/Commands/: CommandExecution.hs  CommandUtilities.hs  ProcessCommands.hs  Transform.hs  Verify.hs
pkg/PhyGraph/Debug/: Debug.hs
pkg/PhyGraph/GraphOptimization/: Medians.hs  PostOrderFunctions.hs  PostOrderSoftWiredFunctions.hs  PostOrderSoftWiredFunctionsNew.hs  PreOrderFunctions.hs  Traversals.hs
pkg/PhyGraph/Graphs/: GraphOperations.hs
pkg/PhyGraph/Input/: BitPack.hs  DataTransformation.hs  FastAC.hs  ReadInputFiles.hs  Reorganize.hs  TNTUtilities.hs
pkg/PhyGraph/Reconciliation/: Adams.hs  Eun.hs  ReconcileGraphs.hs
pkg/PhyGraph/Search/: Build.hs  DistanceMethods.hs  DistanceWagner.hs  Fuse.hs  GeneticAlgorithm.hs  NetworkAddDelete.hs  Refinement.hs  Search.hs  Swap.hs  SwapMaster.hs  WagnerBuild.hs
pkg/PhyGraph/Support/: Support.hs
pkg/PhyGraph/System/: Timing.hs
pkg/PhyGraph/Types/: DistanceTypes.hs  Types.hs
pkg/PhyGraph/Utilities/: DistanceUtilities.hs  Distances.hs  LocalGraph.hs  LocalSequence.hs  TcmHash.hs  ThreeWayFunctions.hs  Utilities.hs
pkg/PhyGraph/app/: CommandLineOptions.hs  phygraph.hs
pkg/PhyGraph/app/Software/: Credits.hs  License.hs  Metadata.hs  Preamble.hs  SplashImage.hs
pkg/PhyGraph/app/Software/Metadata/: TimeStamp.hs
pkg/PhyGraph/doc/: Changelog.md
pkg/PhyGraph/ffi/external-direct-optimization/: alignCharacters.c  c_alignment_interface.c  costMatrix.c
pkg/PhyGraph/lib/dynamic-character/test/: Inspect.hs  TestSuite.hs
pkg/PhyloLib/: CHANGELOG.md  PhyloLib.cabal  README.md
pkg/PhyloLib/src/: Cyclic.hs  GeneralUtilities.hs  GraphFormatUtilities.hs  LocalSequence.hs  ParallelUtilities.hs  SymMatrix.hs  SymMatrixSeq.hs
pkg/PhyloLib/src/Bio/: BinaryRenderingTree.hs
src/: CHANGELOG.md  CommandExecution.hs  DOFFI.hs  DOLargeFFI.hs  DOPrototype.hs  DOSlim.hs  DOSmallFFI.hs  DOUkkonenSequence.hs  DOUkkonenSequenceInt64.hs  DOWide.hs  DOWrapper.hs  DataTransformation.hs  Distances.hs  FastAC.hs  GraphOperations.hs  LICENSE  LocalGraph.hs  LocalSequence.hs  Medians.hs  NaiveDOSequence.hs  PhyGraph.cabal  ProcessCommands.hs  ReadInputFiles.hs  TNTUtilities.hs  Types.hs  cabal.project  phygraph.hs
src/Commands/: CommandExecution.hs  CommandUtilities.hs  ProcessCommands.hs  Transform.hs  Verify.hs
src/Complexity/: CodeStrings.hs  Constants.hs  Graphs.hs  Huffman.hs  Utilities.hs
src/Debug/: Debug.hs
src/DirectOptimization/: DOFFI.hs  DOHuge.hs  DOLargeFFI.hs  DOSlim.hs  DOSmallFFI.hs  DOUkkonenSequence.hs  DOUkkonenSequenceInt64.hs  DOWide.hs  DOWrapper.hs  NaiveDO.hs  NaiveDOSequence.hs  PreOrder.hs
src/GraphOptimization/: Medians.hs  PostOrderFunctions.hs  PostOrderSoftWiredFunctions.hs  PostOrderSoftWiredFunctionsNew.hs  PreOrderFunctions.hs  Traversals.hs
src/Graphs/: GraphOperations.hs
src/Input/: BitPack.hs  BitPackingDimension.hs  DataTransformation.hs  FastAC.hs  ReadInputFiles.hs  Reorganize.hs  TNTUtilities.hs
src/Reconciliation/: Adams.hs  Eun.hs  ReconcileGraphs.hs
src/Search/: Build.hs  DistanceMethods.hs  DistanceWagner.hs  Fuse.hs  GeneticAlgorithm.hs  NetworkAddDelete.hs  NetworkAddDeleteV2.hs  Refinement.hs  Search.hs  Swap.hs  SwapMaster.hs  SwapV2.hs  WagnerBuild.hs
src/Support/: Support.hs
src/System/: Timing.hs
src/Types/: DistanceTypes.hs  Types.hs
src/Utilities/: DistanceUtilities.hs  Distances.hs  LocalGraph.hs  LocalSequence.hs  TcmHash.hs  ThreeWayFunctions.hs  Utilities.hs
src/ffi/external-direct-optimization/: alignmentMatrices.h  c_alignment_interface.c  c_alignment_interface.h  c_alignment_interface2.c  c_alignment_interface2.h  c_code_alloc_setup.c  c_code_alloc_setup.h  costMatrix.c  costMatrix.h  dyn_character.h
src/ffi/memoized-tcm/: costMatrix_2d.cpp
src/lib/alphabet/src/Data/: Alphabet.hs
src/lib/dynamic-character/Bio/: DynamicCharacter.hs
src/lib/dynamic-character/DirectOptimization/: Pairwise.hs  PreOrder.hs
src/lib/dynamic-character/DirectOptimization/Pairwise/: Huge.hs  Internal.hs  Swapping.hs  Ukkonen.hs  Wide.hs
src/lib/dynamic-character/DirectOptimization/Wrapper/: DOHuge.hs  DOWide.hs
src/lib/dynamic-character/src/Bio/: DynamicCharacter.hs
src/lib/dynamic-character/src/DirectOptimization/: Pairwise.hs  PreOrder.hs
src/lib/dynamic-character/test/: Inspect.hs
src/lib/dynamic-character/test/Test/: Aligners.hs
src/lib/measure/src/Measure/: Compact.hs  Diagnosis.hs  Matrix.hs  Metricity.hs  Symbols.hs  Unit.hs
src/lib/measure/test/: TestSuite.hs
src/lib/measure/transition-matrix/src/: TransitionMatrix.hs
src/lib/tcm-memo/: Main.hs
src/lib/tcm/src/Data/: MetricRepresentation.hs
src/lib/utility/src/Data/: Range.hs  UnionSet.hs
src/lib/utility/src/Numeric/: Cost.hs
(+620 files in other folders)
